productcatalogue/product-catalogue/templates/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalogue
  labels:
    app: product-catalogue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-catalogue
  template:
    metadata:
      labels:
        app: product-catalogue
    spec:
      containers:
      - name: product-catalogue
        image:  gcr.io/PROJECT_ID/IMAGE
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8020
#         volumeMounts:
#         - name: config-volume
#           mountPath: /config
#       volumes:
#       - name: config-volume
#         configMap:
#           name: product-catalogue-config
