productcatalogue/product-catalogue/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalogue

spec:
  selector:
    app: product-catalogue
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8020
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8020
  type: ClusterIP
